# logxx

./: .gitmodules  CMakeLists.txt  README.md
include/logxx/: log_format.h  logger_null.h  logger_ostream.h  logger_outputdebugstring.h  logger_splitter.h  logger_stdio.h  logxx.h
source/: log_format.cpp  logger_ostream.cpp  logger_outputdebugstring.cpp  logger_splitter.cpp  logger_stdio.cpp  logxx.cpp  reader_writer_lock.h
tests/: main.cpp  test_log_format.cpp  test_ostream.cpp  test_outputdebugstring.cpp  test_section.cpp  test_set_default.cpp  test_splitter.cpp  test_stdio.cpp
